Border and spacing fixes.

--- a/styles/Recording.module.scss
+++ b/styles/Recording.module.scss
@@ -4,17 +4,19 @@
   border: solid 2px $info;
   border-bottom: none;
   border-radius: 2rem 2rem 0 0;
+  background-color: $grey-lighter;
+  padding-top: 1em;
   @media screen and (min-width: $tablet) {
     border: none;
     border-radius: 0;
     border-top: solid 2px $info;
+    padding-top: 0.5em;
   }
 }
 
 .pseudoColumns {
   width: 100%;
   z-index: 2;
-  background-color: $grey-lighter;
   text-align: center;
   @media screen and (min-width: $desktop) {
     padding-left: 5vw;
